--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,6 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Noti
-      run: python main.py
+      run: python actions/zoom_study_notice.py
       env:
         ZOOM_STUDY_WEBHOOK_URL: ${{ secrets.ZOOM_STUDY_WEBHOOK_URL }}
